# vatsim-exporter

./: .gitignore  .gitlab-ci.yml  .sops.yaml  Cargo.toml  LICENSE  README.md  config.rs  flake.nix  jsonnetfile.json  jsonnetfile.lock.json  shell.nix
.github/workflows/: check.yaml  update.yaml  update.yml
environments/default/: main.jsonnet  secrets.sops.yaml  spec.json
src/: config.rs  main.rs  vatsim.rs
