[package]
name = "vatsim-exporter"
version = "0.1.0"
description = "Prometheus exporter for VATSIM data feed"
homepage = "https://github.com/fpletz/vatsim-exporter"
repository = "https://github.com/fpletz/vatsim-exporter"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
metrics = "0.24"
metrics-util = "0.19"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["brotli", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
futures = "0.3"
figment = { version = "0.10.19", features = ["env"] }
